# 3d-designs

./: .gitignore  README.md  pyproject.toml
designs/escorredor/: model.py
designs/escorredor/output/: escorredor.3mf  escorredor_a1.3mf
src/threed/: __init__.py  app.py  config.py  designs.py  generate.py  geometry.py  split.py
